# CKPlugins

./: CMakeLists.txt  README.md
AVIReader/: AVIReader.cpp  AVIReader.h  CMakeLists.txt
ImageReader/: BmpReader.cpp  BmpReader.h  CMakeLists.txt  ImageReader.cpp  ImageReader.h  ImageReader.rc  PcxReader.cpp  PcxReader.h  TgaReader.cpp  TgaReader.h
ImageReader/tests/: BmpReaderTests.cpp  PcxReaderTests.cpp  README.md  TestFramework.h  TestMain.cpp  TgaReaderTests.cpp
ImageReader/tests/images/pcx/: 1bit_100x100.pcx  1bit_16x16.pcx  1bit_32x32.pcx  24bit_100x75.pcx  24bit_16x16.pcx  24bit_32x32.pcx  24bit_odd_33x20.pcx  4bit_16x16.pcx  4bit_32x32.pcx  8bit_100x75.pcx  8bit_16x16.pcx  8bit_1x1.pcx  8bit_32x32.pcx  8bit_gradient_64x64.pcx  8bit_odd_33x20.pcx  8bit_pattern_64x64.pcx  8bit_tall_10x256.pcx  8bit_wide_256x10.pcx
ImageReader/tests/reference/: ckimagereader_crcs.txt
VirtoolsLoader/: CMakeLists.txt  NemoLoader.cpp  NemoLoader.h  VirtoolsLoader.rc
WavReader/: CMakeLists.txt  WavReader.cpp  WavReader.h  WavReader.rc
cmake/: CKPluginsConfig.cmake.in
